--- a/notation.tex
+++ b/notation.tex
@@ -44,7 +44,7 @@ $N_l$; $\abs{\gamma_l}$ - number of particles in $\gamma_l$;
 
 $\Xi$ - grand partition function;
 
-$z$ - activity;
+$\zeta$ - activity;
 
 $\beta$ - inverse temperature;
 
@@ -103,6 +103,8 @@ $i$; $j$ - index for a particle;
 $\mathbb{N}$ - set of natural numbers;
 
 $\mathbb{N}_0$ - set of non-negative integer numbers;
+
+$\mathbb{R}$ - set of real numbers;
 
 $\varrho \in \mathbb{N}_0^{N_v}$; $\varrho = (\varrho_1, \varrho_2, \ldots, \varrho_{N_{v}})$ - vector with non-negative integer components;
 
