--- a/notation.tex
+++ b/notation.tex
@@ -118,7 +118,7 @@ $\lambda$ - parameter of the Poisson distribution;
 
 $K_n(T^*,\mu^*;y)$ - special functions.
 
-$E(T^*,\mu^*;y)$, $E_1(T^*,\mu^*;y)$, $E_2(T^*,\mu^*;y)$ - quantities defined in~\eqref{def:reducedE}, \eqref{def:reducedE1}, \eqref{def:reducedE2}, respectively.
+$E(T^*,\mu^*;y)$, $E_1(T^*,\mu^*;y)$, $E_2(T^*,\mu^*;y)$ - quantities defined in~\eqref{def:E}, \eqref{def:reducedE1}, \eqref{def:reducedE2}, respectively.
 
 $\bar{y} = \bar{y}(T^*,\mu^*)$ - function that maximizes $E(T^*,\mu^*;y)$.
 
